# kubizone-crds

./: CHANGELOG.md  Cargo.toml  README.md
crds/dev.kubi.zone/v1alpha1/: Record.yaml  Zone.yaml
crds/kubi.zone/v1alpha1/: Record.yaml  Zone.yaml
src/: dump.rs  lib.rs
src/v1alpha1/: dnsrecord.rs  mod.rs  record.rs  zone.rs
