[package]
name = "kubizone-crds"
description = "Rust library exposing the Kubizone CRDs as types."
keywords = ["kubernetes", "kubizone", "crd"]
repository = "https://github.com/kubi-zone/kubizone-crds"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
kube = { version = "0.88", default-features = false, features = ["derive", "rustls-tls", "client", "runtime"] }
k8s-openapi = { version = "0.21", features = ["v1_29"] }

[dev-dependencies]
tracing-subscriber = "0.3"
