[package]
name = "kubizone-crds"
description = "Rust library exposing the Kubizone CRDs as types."
keywords = ["kubernetes", "kubizone", "crd"]
repository = "https://github.com/kubi-zone/kubizone-crds"
version = "0.13.0"
edition = "2021"
license = "MIT"

[[example]]
name = "dump"
path = "src/dump.rs"

[dependencies]
kubizone-common = "0.14.0"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
kube = { version = "0.92.0", default-features = false, features = [
    "derive",
    "rustls-tls",
    "client",
    "runtime",
] }
k8s-openapi = { version = "0.22.0" }

[dev-dependencies]
tracing-subscriber = "0.3"
serde_yaml = "0.9.34"

[features]
# When enabled, the custom resource definitions will be placed in the dev.kubi.zone
# group, instead of the actual kubi.zone group. This way you can have the production
# and dev versions of kubizone resources running side by side, without interfering
# with each other.
dev = []
default = ["v1_29"]
v1_30 = ["k8s-openapi/v1_30"]
v1_29 = ["k8s-openapi/v1_29"]
v1_28 = ["k8s-openapi/v1_28"]
v1_27 = ["k8s-openapi/v1_27"]
